--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,9 +39,9 @@
 	background-color:#000;
 }
 .tocada{
-	background:#06C;
-	color: #06C;
-	quotes:#06C solid 1px;
+	background:#06F;
+	color: #CCC;
+	quotes:#FFF solid 1px;
 }
 
 .textonota{
@@ -59,68 +59,68 @@
 	width:30px;
 	height:40%;
 	float:left;
-	margin-left:5%;
+	margin-left:4.9%;
 }
 #reS{
 	margin-top:24.5%;
     width:30px;
 	height:40%;
 	float:left;
-	margin-left:12%;
+	margin-left:11.9%;
 }
 #faS{
 	margin-top:24.5%;
     width:30px;
 	height:40%;
 	float:left;
-	margin-left:26.5%;
+	margin-left:26.4%;
 }
 #solS{
 	margin-top:24.5%;
 	width:30px;
 	height:40%;
 	float:left;
-	margin-left:33.5%;
+	margin-left:33.4%;
 }
 #laS{
 	margin-top:24.5%;
 	width:30px;
 	height:40%;
 	float:left;
-	margin-left:40.5%;
+	margin-left:40.4%;
 }
 #doSS{
 	margin-top:24.5%;
 	width:30px;
 	height:40%;
 	float:left;
-	margin-left:55%;
+	margin-left:54.9%;
 }
 #reSS{
 	margin-top:24.5%;
 	width:30px;
 	height:40%;
 	float:left;
-	margin-left:62%;
+	margin-left:61.9%;
 }
 #faSS{
 	margin-top:24.5%;
 	width:30px;
 	height:40%;
 	float:left;
-	margin-left:76.5%;
+	margin-left:76.4%;
 }
 #solSS{
 	margin-top:24.5%;
 	width:30px;
 	height:40%;
 	float:left;
-	margin-left:83.5%;
+	margin-left:83.4%;
 }
 #laSS{
 	margin-top:24.5%;
 	width:30px;
 	height:40%;
 	float:left;
-	margin-left:90.5%;
+	margin-left:90.4%;
 }
