--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,9 +39,9 @@
 	background-color:#000;
 }
 .tocada{
-	background:#06F;
-	color: #CCC;
-	quotes:#FFF solid 1px;
+	background:#06C;
+	color: #06C;
+	quotes:#06C solid 1px;
 }
 
 .textonota{
@@ -56,71 +56,71 @@
 
 #doS{
 	margin-top:24.5%;
-	width:30px;
+	width:3.571428%;
 	height:40%;
 	float:left;
-	margin-left:5.1%;
+	margin-left:5%;
 }
 #reS{
 	margin-top:24.5%;
-    width:30px;
+    width:3.571428%;
 	height:40%;
 	float:left;
-	margin-left:12.1%;
+	margin-left:12%;
 }
 #faS{
 	margin-top:24.5%;
-    width:30px;
+    width:3.571428%;
 	height:40%;
 	float:left;
-	margin-left:26.7%;
+	margin-left:26.5%;
 }
 #solS{
 	margin-top:24.5%;
-	width:30px;
+	width:3.571428%;
 	height:40%;
 	float:left;
-	margin-left:33.7%;
+	margin-left:33.5%;
 }
 #laS{
 	margin-top:24.5%;
-	width:30px;
+	width:3.571428%;
 	height:40%;
 	float:left;
-	margin-left:40.7%;
+	margin-left:40.5%;
 }
 #doSS{
 	margin-top:24.5%;
-	width:30px;
+	width:3.571428%;
 	height:40%;
 	float:left;
-	margin-left:55.1%;
+	margin-left:55%;
 }
 #reSS{
 	margin-top:24.5%;
-	width:30px;
+	width:3.571428%;
 	height:40%;
 	float:left;
-	margin-left:62.1%;
+	margin-left:62%;
 }
 #faSS{
 	margin-top:24.5%;
-	width:30px;
+	width:3.571428%;
 	height:40%;
 	float:left;
-	margin-left:76.7%;
+	margin-left:76.5%;
 }
 #solSS{
 	margin-top:24.5%;
-	width:30px;
+	width:3.571428%;
 	height:40%;
 	float:left;
-	margin-left:83.7%;
+	margin-left:83.5%;
 }
 #laSS{
 	margin-top:24.5%;
-	width:30px;
+	width:3.571428%;
 	height:40%;
 	float:left;
-	margin-left:90.7%;
+	margin-left:90.5%;
 }
