--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,9 +39,9 @@
 	background-color:#000;
 }
 .tocada{
-	background:#06C;
-	color: #06C;
-	quotes:#06C solid 1px;
+	background:#0CF;
+	color: #FFF;
+	quotes:#F00 solid 1px;
 }
 
 .textonota{
